Update download links to Telegram channel

--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
     <!-- Landing Page Content -->
     <header>
         <a href="#" class="logo">Ruby<span>Player</span></a>
-        <a href="https://drive.usercontent.google.com/download?id=1dwkOTeqDwGilwli4_OCqVjaIyO4ioC72&export=download&authuser=0"
+        <a href="https://t.me/SportsLiveLink18/943"
             class="btn-download" style="padding: 10px 25px; font-size: 0.9rem;">Download</a>
     </header>
     <section class="hero">
         <h1>Next Generation <span>IPTV Player</span></h1>
         <p class="subtitle">Experience your favorite streams with secure encryption, 4K HDR support, and a beautiful
             interface designed for both Mobile and TV.</p>
-        <a href="https://drive.usercontent.google.com/download?id=1dwkOTeqDwGilwli4_OCqVjaIyO4ioC72&export=download&authuser=0"
+        <a href="https://t.me/SportsLiveLink18/943"
             class="btn-download">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                 <path
@@ -329,7 +329,7 @@
             </div>
             <div class="footer-col">
                 <h3>Credits</h3>
-                <p>Concept & Invention by<br><strong style="color: white;">Mr. Deepak Singh</strong></p>
+                <p>Special Thanks & Invested by<br><strong style="color: white;">Mr. Deepak Singh</strong></p>
                 <a href="https://t.me/lovelyakash41" class="footer-link">
                     <!-- Telegram Icon -->
                     <svg class="telegram-icon" viewBox="0 0 24 24">
@@ -359,7 +359,7 @@
         </p>
         <button id="btn-force" class="btn-download deep-btn" onclick="forceOpen()">Open in App</button>
         <p style="margin-top: 30px; font-size: 0.9rem;">Don't have the app? <a
-                href="https://drive.usercontent.google.com/download?id=1dwkOTeqDwGilwli4_OCqVjaIyO4ioC72&export=download&authuser=0"
+                href="https://t.me/SportsLiveLink18/943"
                 style="color: var(--primary);">Download here</a></p>
     </div>
     <script>
