--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
     <!-- Landing Page Content -->
     <header>
         <a href="#" class="logo">Ruby<span>Player</span></a>
-        <a href="https://t.me/SportsLiveLink18/943"
+        <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/app-release.apk"
             class="btn-download" style="padding: 10px 25px; font-size: 0.9rem;">Download</a>
     </header>
     <section class="hero">
         <h1>Next Generation <span>IPTV Player</span></h1>
         <p class="subtitle">Experience your favorite streams with secure encryption, 4K HDR support, and a beautiful
             interface designed for both Mobile and TV.</p>
-        <a href="https://t.me/SportsLiveLink18/943"
+        <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/app-release.apk"
             class="btn-download">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                 <path
@@ -359,7 +359,7 @@
         </p>
         <button id="btn-force" class="btn-download deep-btn" onclick="forceOpen()">Open in App</button>
         <p style="margin-top: 30px; font-size: 0.9rem;">Don't have the app? <a
-                href="https://t.me/SportsLiveLink18/943"
+                href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/app-release.apk"
                 style="color: var(--primary);">Download here</a></p>
     </div>
     <script>
