--- a/index.html
+++ b/index.html
@@ -270,22 +270,48 @@
     <!-- Landing Page Content -->
     <header>
         <a href="#" class="logo">Ruby<span>Player</span></a>
-        <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
-            class="btn-download" style="padding: 10px 25px; font-size: 0.9rem;">Download</a>
+        <div style="display: flex; gap: 10px;">
+            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+                class="btn-download" style="padding: 10px 20px; font-size: 0.9rem;">
+                📱 Mobile
+            </a>
+            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+                class="btn-download" style="padding: 10px 20px; font-size: 0.9rem; background: #1976d2;">
+                📺 TV
+            </a>
+        </div>
     </header>
     <section class="hero">
         <h1>Next Generation <span>IPTV Player</span></h1>
         <p class="subtitle">Experience your favorite streams with secure encryption, 4K HDR support, and a beautiful
-            interface designed for both Mobile and TV.</p>
-        <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
-            class="btn-download">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                <path
-                    d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z" />
-            </svg>
-            Download Free App
-        </a>
-        <div class="mockup-container">
+            interface designed for Mobile, TV, and Desktop.</p>
+        
+        <!-- Download Buttons -->
+        <div style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin-bottom: 20px;">
+            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+                class="btn-download">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M17 1.01L7 1c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z"/>
+                </svg>
+                Android Mobile
+            </a>
+            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+                class="btn-download" style="background: #1976d2;">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2zm0 14H3V5h18v12z"/>
+                </svg>
+                Android TV
+            </a>
+            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/RubyPlayer.exe"
+                class="btn-download" style="background: #0078d4;">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M3 12V6.75l6-1.32v6.48L3 12m17-9v8.75l-10 .15V5.21L20 3M3 13l6 .09v6.81l-6-1.15V13m17 .25V22l-10-1.91V13.1l10 .15z"/>
+                </svg>
+                Windows
+            </a>
+        </div>
+        
+        <div class="mockup-container"></div>
             <div
                 style="width: 100%; height: 100%; background: linear-gradient(135deg, #111, #222); display: flex; align-items: center; justify-content: center;">
                 <div style="text-align: center;">
