--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <header>
         <a href="#" class="logo">Ruby<span>Player</span></a>
         <div style="display: flex; gap: 10px;">
-            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+            <a href="https://t.me/RubyplayerBr/22"
                 class="btn-download" style="padding: 10px 20px; font-size: 0.9rem;">
                 📱 Mobile
             </a>
@@ -288,7 +288,7 @@
         
         <!-- Download Buttons -->
         <div style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center; margin-bottom: 20px;">
-            <a href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+            <a href="https://t.me/RubyplayerBr/22"
                 class="btn-download">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M17 1.01L7 1c-1.1 0-2 .9-2 2v18c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM17 19H7V5h10v14z"/>
@@ -385,7 +385,7 @@
         </p>
         <button id="btn-force" class="btn-download deep-btn" onclick="forceOpen()">Open in App</button>
         <p style="margin-top: 30px; font-size: 0.9rem;">Don't have the app? <a
-                href="https://github.com/greenhck/TNT3/releases/download/lovelyakash41-at-tele/ruby-player.apk"
+                href="https://t.me/RubyplayerBr/22"
                 style="color: var(--primary);">Download here</a></p>
     </div>
     <script>
